// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`client/messaging/common-message-layout/TextMessage > message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message mixing emoji and text renders them inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      nice game 
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          🔥
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message sent as an emote reads as an action line 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-cvlXHq bmFXbZ"
    >
      * 
    </span>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru sc-fTQwFj fsfFzP cuOTNr"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
     
    <span
      class="sc-gVkspn sc-bUhGxX hWVqVh leznqF"
    >
      waves at everyone
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-hYQmIO dtRIgz sc-hJhISk eRErUH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hJZIGr hkmwov"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      hey
       
      <span
        class="sc-hYQmIO dtRIgz sc-hJhISk eRErUH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hJZIGr hkmwov"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-hYQmIO dtRIgz sc-hJhISk eRErUH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hJZIGr hkmwov"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      hey
       
      <span
        class="sc-hYQmIO dtRIgz sc-hJhISk eRErUH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hJZIGr hkmwov"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      <span
        class="sc-hYQmIO dtRIgz sc-hJhISk eRErUH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hJZIGr hkmwov"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="sc-hYQmIO dtRIgz sc-hJhISk eRErUH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hJZIGr hkmwov"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp kpRXwU"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      Hey
       
      <span
        class="sc-hYQmIO dtRIgz sc-hJhISk eRErUH"
        tabindex="0"
      >
        @
        <span
          aria-label="Username loading…"
          class="sc-hJZIGr hkmwov"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with only emoji renders them jumbo-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs jKHYUh"
        >
          🔥
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs jKHYUh"
        >
          🔥
        </span>
      </div>
       
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs jKHYUh"
        >
          🎉
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage > message with too many emoji for jumbo stays inline-sized 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="sc-ksHopp fTcMPT"
    data-message-id="MESSAGE_ID"
    role="document"
  >
    <div
      class="sc-ilfuVi eNaAZo sc-cVAnfH gGrjiE"
      tabindex="0"
    >
      <span
        class="sc-kHxSrM ksMFKW"
      >
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="sc-dkqRie gUMdHw"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="sc-hYQmIO dtRIgz sc-dwFTru fsfFzP"
      tabindex="0"
    >
      <span
        aria-label="Username loading…"
        class="sc-hJZIGr hkmwov"
      >
                   
      </span>
    </span>
    <i
      aria-hidden="true"
      class="sc-dkqRie gUMdHw"
    >
      : 
    </i>
    <span
      class="sc-gVkspn hWVqVh"
    >
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
      <div
        class="sc-ilfuVi eNaAZo sc-eicrwV cVnbI"
        tabindex="-1"
      >
        <span
          class="sc-ewSVzs hezQpi"
        >
          😀
        </span>
      </div>
    </span>
  </div>
</div>
`;
